--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>7ALI</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="icon" href="7ali.png">
+    <link rel="shortcut icon" type="image/x-icon" href="7ali.png">
 </head>
 <body>
 
