--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="7ali.png">
 </head>
-<body>
+<body> 
 
     <div class="icons">
-        <a href="https://www.facebook.com">
+        <a href="https://web.facebook.com/profile.php?id=100023773612008&_rdc=1&_rdr#">
             <div class="layer">
                 <span></span>
                 <span></span>
@@ -22,7 +22,7 @@
             <div class="text">Facebook</div>
         </a>
 
-        <a href="https://www.youtube.com">
+        <a href="https://www.youtube.com/@7aliofficial">
             <div class="layer">
                 <span></span>
                 <span></span>
@@ -33,7 +33,7 @@
             <div class="text">Youtube</div>
         </a>
 
-        <a href="https://www.instagram.com">
+        <a href="https://www.instagram.com/7ali_officiel?igsh=cnRvYTZ1ZGQ3ejh4">
             <div class="layer">
                 <span></span>
                 <span></span>
@@ -44,15 +44,15 @@
             <div class="text">Instagram</div>
         </a>
 
-        <a href="https://www.linkedin.com">
+        <a href="https://www.spotify.com">
             <div class="layer">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
-                <span class="fab fa-linkedin-in"></span>
+                <span class="fab fa-spotify"></span>
             </div>
-            <div class="text">LinkedIn</div>
+            <div class="text">Spotify</div>
         </a>
     </div>
 
